--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -14,7 +14,7 @@
 /*fade-transform*/
 .fade-transform-leave-active,
 .fade-transform-enter-active {
-  transition: all .5s;
+  transition: all 0.5s;
 }
 .fade-transform-enter {
   opacity: 0;
@@ -28,7 +28,7 @@
 /*breadcrumb transition*/
 .breadcrumb-enter-active,
 .breadcrumb-leave-active {
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .breadcrumb-enter,
@@ -38,10 +38,9 @@
 }
 
 .breadcrumb-move {
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .breadcrumb-leave-active {
   position: absolute;
 }
-
