--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -12,7 +12,7 @@
     width: 180px !important;
     height: 100%;
     position: fixed;
-    font-size: 0px;
+    font-size: 0;
     top: 0;
     bottom: 0;
     left: 0;
@@ -30,7 +30,7 @@
       }
     }
     .el-scrollbar__bar.is-vertical {
-      right: 0px;
+      right: 0;
     }
     .is-horizontal {
       display: none;
@@ -104,7 +104,7 @@
   //适配移动端
   .mobile {
     .main-container {
-      margin-left: 0px;
+      margin-left: 0;
     }
     .sidebar-container {
       transition: transform 0.28s;
