add sl-promo sl-business-promo

--- a/src/index.less
+++ b/src/index.less
@@ -47,9 +47,5 @@ figure {
 img {
   vertical-align: middle;
 }
-.v-modal {
-  z-index: 1004 !important;
-}
-.el-autocomplete-suggestion {
-  width: auto !important;
-}
+
+@import 'styles/common';
