--- a/src/promo/ci/ele_reset.less
+++ b/src/promo/ci/ele_reset.less
@@ -2,3 +2,6 @@
   margin-top: 50px !important;
   margin-bottom: 50px !important;
 }
+.video-player-dimensions {
+  max-height: 660px !important;
+}
