--- a/src/sys/styles/element-ui.scss
+++ b/src/sys/styles/element-ui.scss
@@ -5,11 +5,11 @@
   font-weight: 400 !important;
 }
 
-.el-upload {
-  input[type='file'] {
-    display: none !important;
-  }
-}
+//.el-upload {
+//  input[type='file'] {
+//    display: none !important;
+//  }
+//}
 
 .el-upload__input {
   display: none;
